--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
       <td id="vanadium" class="solids" tabindex="0">
            <ul>
              <li data-atomicnumber="23"><span class="bigfont1" aria-label="atomic number 23">23</span></li>
-             <li data-symbol="v" aria-label="atomic symbol V " class="bigfont2">V<span class="letter-tight">&nbsp;</span></li>
+             <li data-symbol="v" aria-label="atomic symbol V" class="bigfont2">V<span class="letter-tight">&nbsp;</span></li>
              <li data-element="vanadium"><span class="bigfont1" aria-label="element">Vanadium</span></li>
              <li data-weight="50.942"><span class="bigfont1" aria-label="standard atomic weight 50 . 9 4 2">50.942</span></li>
              <li data-groundstate="vanadium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
@@ -355,7 +355,7 @@
       <td id="chromium" class="solids" tabindex="0">
            <ul>
              <li data-atomicnumber="24"><span class="bigfont1" aria-label="atomic number 24">24</span></li>
-             <li data-symbol="cr" aria-label="atomic symbol C r " class="bigfont2">C<span class="letter-tight">r</span></li>
+             <li data-symbol="cr" aria-label="atomic symbol C r" class="bigfont2">C<span class="letter-tight">r</span></li>
              <li data-element="chromium"><span class="bigfont1" aria-label="element">Chromium</span></li>
              <li data-weight="51.996"><span class="bigfont1" aria-label="standard atomic weight 51 . 9 9 6">51.996</span></li>
              <li data-groundstate="chromium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
@@ -365,7 +365,7 @@
        <td id="manganese" class="solids" tabindex="0">
            <ul>
              <li data-atomicnumber="25"><span class="bigfont1" aria-label="atomic number 25">25</span></li>
-             <li data-symbol="mn" aria-label="atomic symbol M n " class="bigfont2">M<span class="letter-tight">n</span></li>
+             <li data-symbol="mn" aria-label="atomic symbol M n" class="bigfont2">M<span class="letter-tight">n</span></li>
              <li data-element="manganese"><span class="bigfont1" aria-label="element">Manganese</span></li>
              <li data-weight="54.938"><span class="bigfont1" aria-label="standard atomic weight 54 . 9 3 8">54.938</span></li>
              <li data-groundstate="manganese"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
@@ -375,7 +375,7 @@
          <td id="iron" class="solids" tabindex="0">
            <ul>
              <li data-atomicnumber="26"><span class="bigfont1" aria-label="atomic number 26">26</span></li>
-             <li data-symbol="fe" aria-label="atomic symbol F e " class="bigfont2">F<span class="letter-tight">e</span></li>
+             <li data-symbol="fe" aria-label="atomic symbol F e" class="bigfont2">F<span class="letter-tight">e</span></li>
              <li data-element="iron"><span class="bigfont1" aria-label="element">Iron</span></li>
              <li data-weight="55.845"><span class="bigfont1" aria-label="standard atomic weight 55 . 8 4 5">55.845</span></li>
              <li data-groundstate="iron"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
@@ -385,7 +385,7 @@
       <td id="cobalt" class="solids" tabindex="0">
            <ul>
              <li data-atomicnumber="27"><span class="bigfont1" aria-label="atomic number 27">27</span></li>
-             <li data-symbol="co" aria-label="atomic symbol C o " class="bigfont2">C<span class="letter-tight">o</span></li>
+             <li data-symbol="co" aria-label="atomic symbol C o" class="bigfont2">C<span class="letter-tight">o</span></li>
              <li data-element="cobalt"><span class="bigfont1" aria-label="element">Cobalt</span></li>
              <li data-weight="58.933"><span class="bigfont1" aria-label="standard atomic weight 58 . 9 3 3">58.933</span></li>
              <li data-groundstate="cobalt"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
@@ -395,7 +395,7 @@
       <td id="nickel" class="solids" tabindex="0">
            <ul>
              <li data-atomicnumber="28"><span class="bigfont1" aria-label="atomic number 28">28</span></li>
-             <li data-symbol="cu" aria-label="atomic symbol N i " class="bigfont2">N<span class="letter-tight">i</span></li>
+             <li data-symbol="cu" aria-label="atomic symbol N i" class="bigfont2">N<span class="letter-tight">i</span></li>
              <li data-element="copper"><span class="bigfont1" aria-label="element">Copper</span></li>
              <li data-weight="63.546"><span class="bigfont1" aria-label="standard atomic weight 63 . 5 4 6">63.546</span></li>
              <li data-groundstate="copper"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
@@ -405,7 +405,7 @@
       <td id="copper" class="solids" tabindex="0">
             <ul>
              <li data-atomicnumber="29"><span class="bigfont1" aria-label="atomic number 29">29</span></li>
-             <li data-symbol="ni" aria-label="atomic symbol C u " class="bigfont2">C<span class="letter-tight">u</span></li>
+             <li data-symbol="ni" aria-label="atomic symbol C u" class="bigfont2">C<span class="letter-tight">u</span></li>
              <li data-element="nickel"><span class="bigfont1" aria-label="element">Nickel</span></li>
              <li data-weight="58.693"><span class="bigfont1" aria-label="standard atomic weight 58 . 6 9 3">58.693</span></li>
              <li data-groundstate="nickel"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
@@ -415,7 +415,7 @@
       <td id="zinc" class="solids" tabindex="0">
             <ul>
              <li data-atomicnumber="30"><span class="bigfont1" aria-label="atomic number 30">30</span></li>
-             <li data-symbol="zn" aria-label="atomic symbol Z n " class="bigfont2">Z<span class="letter-tight">n</span></li>
+             <li data-symbol="zn" aria-label="atomic symbol Z n" class="bigfont2">Z<span class="letter-tight">n</span></li>
              <li data-element="zinc"><span class="bigfont1" aria-label="element">Zinc</span></li>
              <li data-weight="65.38"><span class="bigfont1" aria-label="standard atomic weight 65 . 3 8">65.38</span></li>
              <li data-groundstate="zinc"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
@@ -425,7 +425,7 @@
         <td id="gallium" class="solids" tabindex="0">
             <ul>
              <li data-atomicnumber="31"><span class="bigfont1" aria-label="atomic number 31">31</span></li>
-             <li data-symbol="ga" aria-label="atomic symbol G a " class="bigfont2">G<span class="letter-tight">a</span></li>
+             <li data-symbol="ga" aria-label="atomic symbol G a" class="bigfont2">G<span class="letter-tight">a</span></li>
              <li data-element="gallium"><span class="bigfont1" aria-label="element">Gallium</span></li>
              <li data-weight="69.723"><span class="bigfont1" aria-label="standard atomic weight 69 . 7 2 3">69.723</span></li>
              <li data-groundstate="gallium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
@@ -435,7 +435,7 @@
        <td id="germanium" class="solids" tabindex="0">
             <ul>
              <li data-atomicnumber="32"><span class="bigfont1" aria-label="atomic number 32">32</span></li>
-             <li data-symbol="ge" aria-label="atomic symbol G e " class="bigfont2">G<span class="letter-tight">e</span></li>
+             <li data-symbol="ge" aria-label="atomic symbol G e" class="bigfont2">G<span class="letter-tight">e</span></li>
              <li data-element="germanium"><span class="bigfont1" aria-label="element">Germanium</span></li>
              <li data-weight="72.630"><span class="bigfont1" aria-label="standard atomic weight 72 . 6 3 0">72.630</span></li>
              <li data-groundstate="germanium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
@@ -445,7 +445,7 @@
        <td id="arsenic" class="solids" tabindex="0">
             <ul>
              <li data-atomicnumber="33"><span class="bigfont1" aria-label="atomic number 33">33</span></li>
-             <li data-symbol="as" aria-label="atomic symbol A s " class="bigfont2">A<span class="letter-tight">s</span></li>
+             <li data-symbol="as" aria-label="atomic symbol A s" class="bigfont2">A<span class="letter-tight">s</span></li>
              <li data-element="arsenic"><span class="bigfont1" aria-label="element">Arsenic</span></li>
              <li data-weight="74.922"><span class="bigfont1" aria-label="standard atomic weight 74 . 9 2 2">74.922</span></li>
              <li data-groundstate="arsenic"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
@@ -455,7 +455,7 @@
        <td id="selenium" class="solids" tabindex="0">
             <ul>
              <li data-atomicnumber="34"><span class="bigfont1" aria-label="atomic number 34">34</span></li>
-             <li data-symbol="se" aria-label="atomic symbol S e " class="bigfont2">S<span class="letter-tight">e</span></li>
+             <li data-symbol="se" aria-label="atomic symbol S e" class="bigfont2">S<span class="letter-tight">e</span></li>
              <li data-element="selenium"><span class="bigfont1" aria-label="element">Selenium</span></li>
              <li data-weight="78.971"><span class="bigfont1" aria-label="standard atomic weight 78 . 9 7 1">78.971</span></li>
              <li data-groundstate="selenium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
@@ -465,7 +465,7 @@
        <td id="bromine" class="liquids" tabindex="0">
             <ul>
              <li data-atomicnumber="35"><span class="bigfont1" aria-label="atomic number 35">35</span></li>
-             <li data-symbol="br" aria-label="atomic symbol B r " class="bigfont2">B<span class="letter-tight">r</span></li>
+             <li data-symbol="br" aria-label="atomic symbol B r" class="bigfont2">B<span class="letter-tight">r</span></li>
              <li data-element="bromine"><span class="bigfont1" aria-label="element">Bromine</span></li>
              <li data-weight="79.904"><span class="bigfont1" aria-label="standard atomic weight 79 . 9 0 4">79.904</span></li>
              <li data-groundstate="bromine"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
@@ -475,7 +475,7 @@
        <td id="krypton" class="gases" tabindex="0">
             <ul>
              <li data-atomicnumber="36"><span class="bigfont1" aria-label="atomic number 36">36</span></li>
-             <li data-symbol="kr" aria-label="atomic symbol K r " class="bigfont2">K<span class="letter-tight">r</span></li>
+             <li data-symbol="kr" aria-label="atomic symbol K r" class="bigfont2">K<span class="letter-tight">r</span></li>
              <li data-element="krypton"><span class="bigfont1" aria-label="element">Krypton</span></li>
              <li data-weight="83.798"><span class="bigfont1" aria-label="standard atomic weight 83 . 7 9 8">83.798</span></li>
              <li data-groundstate="krypton"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
@@ -487,7 +487,7 @@
         <td id="rubidium" class="solids" tabindex="0">
             <ul>
              <li data-atomicnumber="37"><span class="bigfont1" aria-label="atomic number 37">37</span></li>
-             <li data-symbol="rb" aria-label="atomic symbol R b " class="bigfont2">R<span class="letter-tight">b</span></li>
+             <li data-symbol="rb" aria-label="atomic symbol R b" class="bigfont2">R<span class="letter-tight">b</span></li>
              <li data-element="rubidium"><span class="bigfont1" aria-label="element">Rubidium</span></li>
              <li data-weight="85.468"><span class="bigfont1" aria-label="standard atomic weight 85.468">85.468</span></li>
              <li data-groundstate="rubidium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
@@ -497,7 +497,7 @@
          <td id="strontium" class="solids" tabindex="0">
             <ul>
              <li data-atomicnumber="38"><span class="bigfont1" aria-label="atomic number 38">38</span></li>
-             <li data-symbol="sr" aria-label="atomic symbol S r " class="bigfont2">S<span class="letter-tight">r</span></li>
+             <li data-symbol="sr" aria-label="atomic symbol S r" class="bigfont2">S<span class="letter-tight">r</span></li>
              <li data-element="strontium"><span class="bigfont1" aria-label="element">Strontium</span></li>
              <li data-weight="87.62"><span class="bigfont1" aria-label="standard atomic weight 87 . 6 2 8">87.62</span></li>
              <li data-groundstate="strontium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
@@ -507,7 +507,7 @@
        <td id="yttrium" class="solids" tabindex="0">
             <ul>
              <li data-atomicnumber="39"><span class="bigfont1" aria-label="atomic number 39">39</span></li>
-             <li data-symbol="y" aria-label="atomic symbol Y " class="bigfont2">Y<span class="letter-tight">&nbsp;</span></li>
+             <li data-symbol="y" aria-label="atomic symbol Y" class="bigfont2">Y<span class="letter-tight">&nbsp;</span></li>
              <li data-element="yttrium"><span class="bigfont1" aria-label="element">Yttrium</span></li>
              <li data-weight="88.906"><span class="bigfont1" aria-label="standard atomic weight 88 . 9 0 6">88.906</span></li>
              <li data-groundstate="yttrium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
@@ -517,7 +517,7 @@
         <td id="zirconium" class="solids" tabindex="0">
             <ul>
              <li data-atomicnumber="40"><span class="bigfont1" aria-label="atomic number 40">40</span></li>
-             <li data-symbol="zr" aria-label="atomic symbol Z r " class="bigfont2">Z<span class="letter-tight">r</span></li>
+             <li data-symbol="zr" aria-label="atomic symbol Z r" class="bigfont2">Z<span class="letter-tight">r</span></li>
              <li data-element="zirconium"><span class="bigfont1" aria-label="element">Zirconium</span></li>
              <li data-weight="91.224"><span class="bigfont1" aria-label="standard atomic weight 91 . 2 2 4">91.224</span></li>
              <li data-groundstate="zirconium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
@@ -527,14 +527,23 @@
        <td id="niobium" class="solids" tabindex="0">
             <ul>
              <li data-atomicnumber="41"><span class="bigfont1" aria-label="atomic number 41">41</span></li>
-             <li data-symbol="N b" aria-label="atomic symbol N b " class="bigfont2">N<span class="letter-tight">b</span></li>
+             <li data-symbol="N b" aria-label="atomic symbol N b" class="bigfont2">N<span class="letter-tight">b</span></li>
              <li data-element="niobium"><span class="bigfont1" aria-label="element">Niobium</span></li>
              <li data-weight="92.906"><span class="bigfont1" aria-label="standard atomic weight 92 . 9 0 6">92.906</span></li>
              <li data-groundstate="niobium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
              <li data-ev="6.7589"><span class="bigfont1" aria-label="ionization energy 6 . 7 5 8 9">6.7589</span></li> 
           </ul>
        </td>
-      <td>Row 5, Cell 5</td>
+        <td id="molybdenum" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="42"><span class="bigfont1" aria-label="atomic number 42">42</span></li>
+             <li data-symbol="M o" aria-label="atomic symbol M o" class="bigfont2">M<span class="letter-tight">o</span></li>
+             <li data-element="molybdenum"><span class="bigfont1" aria-label="element">Molybdenum</span></li>
+             <li data-weight="95.95"><span class="bigfont1" aria-label="standard atomic weight 95 . 9 5">95.95</span></li>
+             <li data-groundstate="molybdenum"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="7.0924"><span class="bigfont1" aria-label="ionization energy 7 . 0 9 2 4">7.0924</span></li> 
+          </ul>
+       </td>
       <td>Row 5, Cell 6</td>
       <td>Row 5, Cell 7</td>
       <td>Row 5, Cell 8</td>
