--- a/css/main_backup.html
+++ b/css/main_backup.html
@@ -5,7 +5,7 @@ body{
 background-color: #FFFACD;
 }
 .liquids {
-background-color: #B0E0E6;
+background-color: #E6E6FA;
 }
 .gases {
 background-color: #FFDAB9;
@@ -24,9 +24,6 @@ ul {
 }
 table, th, td {
   border: 1px solid black;
-}
-td {
-  width: 59px;
 }
 .left100 {
   margin-left:100px;
