--- a/index.html
+++ b/index.html
@@ -544,7 +544,16 @@
              <li data-ev="7.0924"><span class="bigfont1" aria-label="ionization energy 7 . 0 9 2 4">7.0924</span></li> 
           </ul>
        </td>
-      <td>Row 5, Cell 6</td>
+       <td id="technetium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="43"><span class="bigfont1" aria-label="atomic number 43">43</span></li>
+             <li data-symbol="T c" aria-label="atomic symbol T c" class="bigfont2">T<span class="letter-tight">c</span></li>
+             <li data-element="technetium"><span class="bigfont1" aria-label="element">Technetium</span></li>
+             <li data-weight="97"><span class="bigfont1" aria-label="standard atomic weight 97">(97)</span></li>
+             <li data-groundstate="technetium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="7.1194"><span class="bigfont1" aria-label="ionization energy 7 . 1 1 9 4">7.1194</span></li> 
+          </ul>
+       </td>
       <td>Row 5, Cell 7</td>
       <td>Row 5, Cell 8</td>
       <td>Row 5, Cell 9</td>
