--- a/index.html
+++ b/index.html
@@ -567,11 +567,11 @@
        <td id="rhodium" class="solids" tabindex="0">
             <ul>
              <li data-atomicnumber="45"><span class="bigfont1" aria-label="atomic number 45">45</span></li>
-             <li data-symbol="T c" aria-label="atomic symbol T c" class="bigfont2">T<span class="letter-tight">c</span></li>
+             <li data-symbol="R h" aria-label="atomic symbol R h" class="bigfont2">R<span class="letter-tight">h</span></li>
              <li data-element="rhodium"><span class="bigfont1" aria-label="element">Rhodium</span></li>
-             <li data-weight="97"><span class="bigfont1" aria-label="standard atomic weight 97">(97)</span></li>
+             <li data-weight="102.91"><span class="bigfont1" aria-label="standard atomic weight 102 . 9 1">102.91</span></li>
              <li data-groundstate="rhodium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
-             <li data-ev="7.1194"><span class="bigfont1" aria-label="ionization energy 7 . 1 1 9 4">7.1194</span></li> 
+             <li data-ev="7.4589"><span class="bigfont1" aria-label="ionization energy 7 . 4 5 8 9">7.4589</span></li> 
           </ul>
        </td>
       <td>Row 5, Cell 9</td>
