--- a/index_backup2.html
+++ b/index_backup2.html
@@ -544,9 +544,36 @@
              <li data-ev="7.0924"><span class="bigfont1" aria-label="ionization energy 7 . 0 9 2 4">7.0924</span></li> 
           </ul>
        </td>
-      <td>Row 5, Cell 6</td>
-      <td>Row 5, Cell 7</td>
-      <td>Row 5, Cell 8</td>
+       <td id="technetium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="43"><span class="bigfont1" aria-label="atomic number 43">43</span></li>
+             <li data-symbol="T c" aria-label="atomic symbol T c" class="bigfont2">T<span class="letter-tight">c</span></li>
+             <li data-element="technetium"><span class="bigfont1" aria-label="element">Technetium</span></li>
+             <li data-weight="97"><span class="bigfont1" aria-label="standard atomic weight 97">(97)</span></li>
+             <li data-groundstate="technetium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="7.1194"><span class="bigfont1" aria-label="ionization energy 7 . 1 1 9 4">7.1194</span></li> 
+          </ul>
+       </td>
+       <td id="ruthenium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="44"><span class="bigfont1" aria-label="atomic number 44">44</span></li>
+             <li data-symbol="R u" aria-label="atomic symbol R u" class="bigfont2">R<span class="letter-tight">u</span></li>
+             <li data-element="ruthenium"><span class="bigfont1" aria-label="element">Ruthenium</span></li>
+             <li data-weight="101.07"><span class="bigfont1" aria-label="standard atomic weight 101 . 0 7">101.07</span></li>
+             <li data-groundstate="ruthenium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="7.3605"><span class="bigfont1" aria-label="ionization energy 7 . 3 6 0 5">7.3605</span></li> 
+          </ul>
+       </td>
+       <td id="rhodium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="45"><span class="bigfont1" aria-label="atomic number 45">45</span></li>
+             <li data-symbol="R h" aria-label="atomic symbol R h" class="bigfont2">R<span class="letter-tight">h</span></li>
+             <li data-element="rhodium"><span class="bigfont1" aria-label="element">Rhodium</span></li>
+             <li data-weight="102.91"><span class="bigfont1" aria-label="standard atomic weight 102 . 9 1">102.91</span></li>
+             <li data-groundstate="rhodium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="7.4589"><span class="bigfont1" aria-label="ionization energy 7 . 4 5 8 9">7.4589</span></li> 
+          </ul>
+       </td>
       <td>Row 5, Cell 9</td>
       <td>Row 5, Cell 10</td>
       <td>Row 5, Cell 11</td>
