--- a/index.html
+++ b/index.html
@@ -574,8 +574,26 @@
              <li data-ev="7.4589"><span class="bigfont1" aria-label="ionization energy 7 . 4 5 8 9">7.4589</span></li> 
           </ul>
        </td>
-      <td>Row 5, Cell 9</td>
-      <td>Row 5, Cell 10</td>
+         <td id="palladium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="46"><span class="bigfont1" aria-label="atomic number 46">46</span></li>
+             <li data-symbol="P d" aria-label="atomic symbol P d" class="bigfont2">P<span class="letter-tight">d</span></li>
+             <li data-element="palladium"><span class="bigfont1" aria-label="element">Palladium</span></li>
+             <li data-weight="106.42"><span class="bigfont1" aria-label="standard atomic weight 106 . 4 2">106.42</span></li>
+             <li data-groundstate="palladium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="8.3369"><span class="bigfont1" aria-label="ionization energy 8 . 3 3 6 9">8.3369</span></li> 
+          </ul>
+       </td>
+       <td id="silver" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="47"><span class="bigfont1" aria-label="atomic number 47">47</span></li>
+             <li data-symbol="A g" aria-label="atomic symbol A g" class="bigfont2">A<span class="letter-tight">g</span></li>
+             <li data-element="silver"><span class="bigfont1" aria-label="element">Silver</span></li>
+             <li data-weight="107.87"><span class="bigfont1" aria-label="standard atomic weight 107 . 8 7">107.87</span></li>
+             <li data-groundstate="silver"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="7.5762"><span class="bigfont1" aria-label="ionization energy 7 . 5 7 6 2">7.5762</span></li> 
+          </ul>
+       </td>
       <td>Row 5, Cell 11</td>
       <td>Row 5, Cell 12</td>
       <td>Row 5, Cell 13</td>
