--- a/index.html
+++ b/index.html
@@ -691,9 +691,9 @@
   <div  class="left100">
      <p tabindex="0">This page last modified or reviewed</p>
      <ul>
-        <li>content: 2 December 2019</li>
+        <li>content: 3 December 2019</li>
         <li>WebAim: 2 December 2019 0</li>
-        <li>NuHTML: 2 December 2019 aria-label warnings</li>
+        <li>NuHTML: 2 December 2019 multiple aria-label warnings (expected, in this case)</li>
      </ul>
   </div>
     </footer>
