--- a/index.html
+++ b/index.html
@@ -601,7 +601,16 @@
              <li data-ev="7.5762"><span class="bigfont1" aria-label="ionization energy 7 . 5 7 6 2">7.5762</span></li> 
           </ul>
        </td>
-      <td>Row 5, Cell 11</td>
+       <td id="cadmium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="47"><span class="bigfont1" aria-label="atomic number 47">47</span></li>
+             <li data-symbol="A g" aria-label="atomic symbol A g" class="bigfont2">A<span class="letter-tight">g</span></li>
+             <li data-element="cadmium"><span class="bigfont1" aria-label="element">Cadmium</span></li>
+             <li data-weight="107.87"><span class="bigfont1" aria-label="standard atomic weight 107 . 8 7">107.87</span></li>
+             <li data-groundstate="cadmium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="7.5762"><span class="bigfont1" aria-label="ionization energy 7 . 5 7 6 2">7.5762</span></li> 
+          </ul>
+       </td>
       <td>Row 5, Cell 12</td>
       <td>Row 5, Cell 13</td>
       <td>Row 5, Cell 14</td>
