--- a/index.html
+++ b/index.html
@@ -700,10 +700,11 @@
     <footer>
   <div class="left100">
      <p tabindex="0">This page last modified or reviewed</p>
-     <ul>
+     <ul class="left100">
         <li>content: 3 December 2019</li>
         <li>WebAim: 2 December 2019 0</li>
         <li>NuHTML: 2 December 2019 multiple aria-label warnings (expected, in this case)</li>
+        <li>Note:aria-label used to over-ride screen reader mispronunciations of atomic weights</li>
      </ul>
   </div>
     </footer>
