--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
              <li data-symbol="li" aria-label="atomic symbol L i" class="bigfont2">L<span class="letter-tight">i</span></li>
              <li data-element="lithium"><span class="bigfont1" aria-label="element">Lithium</span></li>
              <li data-weight="6.94"><span class="bigfont1" aria-label="standard atomic weight 6 . 0 4">6.94</span></li>
-             <li data-groundstate="lithium"><span class="bigfont1" aria-label="ground state one s">1s^22s</span></li>
+             <li data-groundstate="lithium"><span class="bigfont1" aria-label="ground state 1 s 2  2 s 1">1s^2s^1</span></li>
              <li data-ev="5.3917"><span class="bigfont1" aria-label="ionization energy 5 . 3 9 1 7">5.3917</span></li> 
           </ul>
        </td>
@@ -736,6 +736,7 @@ function search_table(){
   }
 }
 </script> 
+ <!-- See reference to mchem https://mhchem.github.io/MathJax-mhchem/ -->
  <!-- MathJaX JavaScript -->
 <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
 <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
