--- a/index.html
+++ b/index.html
@@ -710,12 +710,12 @@
     <footer>
   <div class="left100">
      <p tabindex="0">This page last modified or reviewed</p>
-     <ul class="left100">
-        <li>content: 3 December 2019</li>
-        <li>WebAim: 2 December 2019 0</li>
-        <li>NuHTML: 2 December 2019 multiple aria-label warnings (expected, in this case)</li>
-        <li>Note:aria-label used to over-ride screen reader mispronunciations of atomic weights</li>
-     </ul>
+
+        content: 3 December 2019<br />
+        WebAim: 2 December 2019 0<br />
+         NuHTML: 2 December 2019 multiple aria-label warnings (expected, in this case)<br />
+        Note:aria-label used to over-ride screen reader mispronunciations of atomic weights<br />
+
   </div>
     </footer>
   <!-- https://stackoverflow.com/questions/9127498/how-to-perform-a-real-time-search-and-filter-on-a-html-table -->
