--- a/index.html
+++ b/index.html
@@ -701,14 +701,12 @@
     <footer>
   <div class="left100">
      <p tabindex="0">This page last modified or reviewed</p>
-
-        content: 3 December 2019<br />
+        Content: 3 December 2019<br />
         WebAim: 2 December 2019 0<br />
-         NuHTML: 2 December 2019 multiple aria-label warnings (expected, in this case)<br />
+        NuHTML: 2 December 2019 multiple aria-label warnings (expected, in this case)<br />
         Note:aria-label used to over-ride screen reader mispronunciations of atomic weights<br />
-
   </div>
-    </footer>
+</footer>
   <!-- https://stackoverflow.com/questions/9127498/how-to-perform-a-real-time-search-and-filter-on-a-html-table -->
 <script>
 function search_table(){
