--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
              <li data-symbol="be" aria-label="atomic symbol B e" class="bigfont2">B<span class="letter-tight">e</span></li>
              <li data-element="beryllium"><span class="bigfont1" aria-label="element">Beryllium</span></li>
              <li data-weight="9.0122"><span class="bigfont1" aria-label="standard atomic weight 9 . 0 1 2 2">9.0122</span></li>
-             <li data-groundstate="beryllium"><span class="bigfont1" aria-label="ground state one s">1s^2 2s^2</span></li>
+             <li data-groundstate="beryllium"><span class="bigfont1" aria-label="ground state 1 s 2  2 s 2>1s<sup>2</sup> 2s<sup>2</sup></span></li>
              <li data-ev="9.3227"><span class="bigfont1" aria-label="ionization energy 9 . 3 2 2 7">9.3227</span></li> 
           </ul>
        </td>
@@ -735,11 +735,5 @@ function search_table(){
   }
 }
 </script> 
- <!-- See reference to mchem https://mhchem.github.io/MathJax-mhchem/ -->
- <!-- MathJaX JavaScript -->
-<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
- <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
  </body>   
 </html>
