--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
              <li data-symbol="be" aria-label="atomic symbol B e" class="bigfont2">B<span class="letter-tight">e</span></li>
              <li data-element="beryllium"><span class="bigfont1" aria-label="element">Beryllium</span></li>
              <li data-weight="9.0122"><span class="bigfont1" aria-label="standard atomic weight 9 . 0 1 2 2">9.0122</span></li>
-             <li data-groundstate="beryllium"><span class="bigfont1" aria-label="ground state 1 s 2  2 s 2>1s<sup>2</sup> 2s<sup>2</sup></span></li>
+             <li data-groundstate="beryllium"><span class="bigfont1" aria-label="ground state 1 s 2  2 s 2">1s<sup>2</sup> 2s<sup>2</sup></span></li>
              <li data-ev="9.3227"><span class="bigfont1" aria-label="ionization energy 9 . 3 2 2 7">9.3227</span></li> 
           </ul>
        </td>
@@ -155,7 +155,7 @@
              <li data-symbol="b" aria-label="atomic symbol B" class="bigfont2">B<span class="letter-tight">&nbsp;</span></li>
              <li data-element="boron"><span class="bigfont1" aria-label="element">Boron</span></li>
              <li data-weight="10.81"><span class="bigfont1" aria-label="standard atomic weight 10 . 8 1">10.81</span></li>
-             <li data-groundstate="boron"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="boron"><span class="bigfont1" aria-label="ground 1 s 2 2 s 2 2 p">1s<sup>2</sup>2s<sup>2</sup>2p</span></li>
              <li data-ev="8.2980"><span class="bigfont1" aria-label="ionization energy 8 . 2 9 8 0">8.2980</span></li> 
           </ul>
        </td>
@@ -605,7 +605,16 @@
              <li data-ev="8.9938"><span class="bigfont1" aria-label="ionization energy 8 . 9 9 3 8">8.9938</span></li> 
           </ul>
        </td>
-      <td>Row 5, Cell 12</td>
+       <td id="indium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="48"><span class="bigfont1" aria-label="atomic number 48">48</span></li>
+             <li data-symbol="C d" aria-label="atomic symbol C d" class="bigfont2">C<span class="letter-tight">d</span></li>
+             <li data-element="indium"><span class="bigfont1" aria-label="element">Indium</span></li>
+             <li data-weight="112.41"><span class="bigfont1" aria-label="standard atomic weight 112 . 4 1">112.41</span></li>
+             <li data-groundstate="indium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="8.9938"><span class="bigfont1" aria-label="ionization energy 8 . 9 9 3 8">8.9938</span></li> 
+          </ul>
+       </td>
       <td>Row 5, Cell 13</td>
       <td>Row 5, Cell 14</td>
       <td>Row 5, Cell 15</td>
