--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
              <li data-symbol="C d" aria-label="atomic symbol C d" class="bigfont2">C<span class="letter-tight">d</span></li>
              <li data-element="cadmium"><span class="bigfont1" aria-label="element">Cadmium</span></li>
              <li data-weight="112.41"><span class="bigfont1" aria-label="standard atomic weight 112 . 4 1">112.41</span></li>
-             <li data-groundstate="cadmium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="cadmium"><span class="bigfont1" aria-label="ground [Kr]4d 10 5 s 2">[Kr]4d<sup>10</sup>5s<sup>2</sup></span></li>
              <li data-ev="8.9938"><span class="bigfont1" aria-label="ionization energy 8 . 9 9 3 8">8.9938</span></li> 
           </ul>
        </td>
@@ -610,9 +610,9 @@
              <li data-atomicnumber="49"><span class="bigfont1" aria-label="atomic number 49">49</span></li>
              <li data-symbol="C d" aria-label="atomic symbol C d" class="bigfont2">C<span class="letter-tight">d</span></li>
              <li data-element="indium"><span class="bigfont1" aria-label="element">Indium</span></li>
-             <li data-weight="112.41"><span class="bigfont1" aria-label="standard atomic weight 112 . 4 1">112.41</span></li>
-             <li data-groundstate="indium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
-             <li data-ev="8.9938"><span class="bigfont1" aria-label="ionization energy 8 . 9 9 3 8">8.9938</span></li> 
+             <li data-weight="114.82"><span class="bigfont1" aria-label="standard atomic weight 114 . 8 2">114.82</span></li>
+             <li data-groundstate="indium"><span class="bigfont1" aria-label="ground [Kr] 4 d 10 5 s 2 5p">[Kr]4d<sup>10</sup>5s<sup>2</sup>5p</span></li>
+             <li data-ev="5.7864"><span class="bigfont1" aria-label="ionization energy 5 . 7 8 6 4">5.7864</span></li> 
           </ul>
        </td>
       <td>Row 5, Cell 13</td>
